nginx/deamonSet.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginix-daemon
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx


  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
